applications/openeuler-repo-cn-north4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: repo-nginx-pod
  name: repo2
