applications/openeuler-repo-cn-north4/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: repo-openatom-ingress
  namespace: repo2
spec:
  rules:
  - host: repo.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: openeuler-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - repo.openeuler.openatom.cn
    secretName: repo-openatom-tls
